fix over-expanding button-grid height
Currently, the button-grid-canvas expands vertically to fill the window. This is mildly annoying in general, but also effectively hides the bottom "add rows" button if "Allow expanding in grid view" is enabled, since it's set to the bottom of the button-grid-canvas. (So the user sees only blank space below the buttons instead of the "add rows" form no matter how much they increase window-height.). Also, for some reason, the scrollbar doesn't go away, at least with four rows of buttons.

This PR fixes the problem, though it does require a "magic number" in ButtonInfiniteGrid (flagged - look for "Why?"

--- a/webui/src/scss/_button-grid.scss
+++ b/webui/src/scss/_button-grid.scss
@@ -83,8 +83,8 @@
 }
 
 .button-grid-panel {
-	display: grid;
-	grid-template-rows: auto 1fr auto;
+	display: flex;
+	flex-direction: column;
 	height: 100%;
 }
 
@@ -103,12 +103,11 @@
 }
 
 .button-infinite-grid {
-	height: 100%;
-	max-height: 65vh;
+	height: 100%; // needed to get the scrollbar.
 
 	background-color: #222;
 	// border-radius: 5px; // A radius here breaks safari, causing the div to draw over the scrollbars
-	overflow: scroll;
+	overflow: auto;
 
 	&.button-armed {
 		background-color: #7f1111;
@@ -116,8 +115,6 @@
 
 	.button-grid-canvas {
 		position: relative;
-		width: 1000px;
-		height: 1000px;
 
 		// default grid scale, used for button text
 		--grid-scale: 1;
